Translates missing parts of "lscom-cli-dotnet" and "docker-mini-cctv-nrv" Update docker-mini-cctv-nvr.yml, docker-mini-cctv-nvr.yml, and 4 more files...

--- a/data/projects/docker-mini-cctv-nvr.yml
+++ b/data/projects/docker-mini-cctv-nvr.yml
@@ -28,6 +28,8 @@ projects:
         subtitle_key: "article.subtitle"
         tags:
           - "docker"
+          - "cctv"
+          - "nvr"
         languages:
           - "docker"
           - "php"
