Added IBAN generator stub, Updated some strings Update iban-generator.yml, ico-maker.yml, and 7 more files...

--- a/data/strings/en/ico-maker.yml
+++ b/data/strings/en/ico-maker.yml
@@ -1,3 +1,11 @@
 # EN - Ico Maker
 
-t01: ""
+meta.title: "Icon Maker"
+meta.description: "..."
+
+
+
+
+enable.expert.mode: "Enable expert mode"
+enable.binary.blobs: "Allow binary blobs"
+enable.binary.blobs.subtext: "Enables upload and inclusion in final .ico file."
