Finished IBAN generator mockup and base page, Updated UUID generator to use shared strings Update commons.yml, countries.yml, and 10 more files...

--- a/data/strings/en/commons.yml
+++ b/data/strings/en/commons.yml
@@ -84,3 +84,9 @@ file.drop.selected.single: "You selected 1 file"
 file.drop.selected.multiple: "You selected <span class=\"np-file-drop-count\">???</span> files"
 
 license.mit.single: "MIT License"
+
+format.raw: "Raw"
+format.json: "JSON"
+format.yaml: "YAML"
+
+action.generate: "Generate"
