--- a/data/strings/fr/commons.yml
+++ b/data/strings/fr/commons.yml
@@ -84,3 +84,9 @@ file.drop.selected.single: "Vous avez séléctionné 1 fichier"
 file.drop.selected.multiple: "Vous avez séléctionné <span class=\"np-file-drop-count\">???</span> fichiers"
 
 license.mit.single: "License MIT"
+
+format.raw: "Brut"
+format.json: "JSON"
+format.yaml: "YAML"
+
+action.generate: "Générer"
