Finished IBAN generator, Hotfixed standalone pages spacing, Imrpoved IBAN generator standalone appearance Update commons.yml, iban-generator.yml, and 6 more files...

--- a/data/strings/en/commons.yml
+++ b/data/strings/en/commons.yml
@@ -85,6 +85,7 @@ file.drop.selected.multiple: "You selected <span class=\"np-file-drop-count\">??
 
 license.mit.single: "MIT License"
 
+format.download.as: "Download as"
 format.raw: "Raw"
 format.json: "JSON"
 format.yaml: "YAML"
