Disabled unfinished projects and tools, Removed unused section, Improved readability, publish first public version Update Dockerfile, app.py, and 38 more files...

--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -6,13 +6,13 @@
 
 -
 
-- title_key: text.articles
-  abs_href: "/articles/"
-  icon: fad fa-newspaper
-  active_id: articles
-  has_new_until_utc: 0
-
--
+#- title_key: text.articles
+#  abs_href: "/articles/"
+#  icon: fad fa-newspaper
+#  active_id: articles
+#  has_new_until_utc: 0
+#
+#-
 
 - title_key: text.applications
   abs_href: "/content/?tags=application;web"
