--- a/data/strings/en/excel-password-remover.yml
+++ b/data/strings/en/excel-password-remover.yml
@@ -1,6 +1,6 @@
 # EN - Excel Password Remover
 
-meta.title: Excel Worksheet Password Remover
+meta.title: Excel Password Remover
 meta.description: >-
   Small web page from which you can easily remove a password from an Excel
   worksheet.  It works by leaving the task of editing the XML files on an Excel
