--- a/data/strings/fr/excel-password-remover.yml
+++ b/data/strings/fr/excel-password-remover.yml
@@ -1,6 +1,6 @@
 # FR - Excel Password Remover
 
-_meta.title: ''
+meta.title: Excel Password Remover
 meta.description: >-
   Petite application web qui permet de facilement retirer le mot de passe d'une
   feuille de calcul Excel depuis votre navigateur web sans avoir à uploader le
