--- a/data/tools/iban-generator.yml
+++ b/data/tools/iban-generator.yml
@@ -28,4 +28,5 @@ tools:
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
-          - "undefined"
+          - "generator"
+          - "finance"
