--- a/data/tools/uuid-generator.yml
+++ b/data/tools/uuid-generator.yml
@@ -11,7 +11,7 @@ tools:
         description_key: "meta.description"
         type: null
         url: null
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/tools/uuid-generator/main.png"
         image_type: null
       twitter:
         title_key: "meta.title"
@@ -21,11 +21,11 @@ tools:
         enable: true
         title_key: "meta.title"
         preamble_key: "meta.description"
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/tools/uuid-generator/main.png"
         image_alt_key: ""
       general:
         icon: "fab fa-python"
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
-          - "undefined"
+          - "generator"
