Added basic opengraph support to project and tools pages Update excel-password-remover.yml, iban-generator.yml, and 9 more files...

--- a/data/strings/en/excel-password-remover.yml
+++ b/data/strings/en/excel-password-remover.yml
@@ -2,9 +2,13 @@
 
 meta.title: Excel Password Remover
 meta.description: >-
-  Small web page from which you can easily remove a password from an Excel
+  Small web application from which you can easily remove a password from an Excel
   worksheet.  It works by leaving the task of editing the XML files on an Excel
   document to your browser instead to keep everything local.
+meta.description.light: >-
+  Small web application from which you can easily remove a password from an Excel
+  worksheet directly in your browser.
+
 #article.subtitle: >-
 #  <a
 #  href="https://github.com/aziascreations/Excel-Worksheet-Password-Remover"><i
