--- a/data/strings/fr/excel-password-remover.yml
+++ b/data/strings/fr/excel-password-remover.yml
@@ -6,6 +6,10 @@ meta.description: >-
   feuille de calcul Excel depuis votre navigateur web sans avoir à uploader le
   fichier sur internet.  Cette application laisse votre navigateur modifier les
   fichiers XML du fichier Excel afin de tout garder en local.
+meta.description.light: >-
+  Application web qui permet de facilement retirer le mot de passe d'un ficher Excel depuis 
+  votre navigateur web sans avoir à uploader le fichier sur internet.
+
 #article.subtitle: >-
 #  <a
 #  href="https://github.com/aziascreations/Excel-Worksheet-Password-Remover"><i
