--- a/data/strings/en/home.yml
+++ b/data/strings/en/home.yml
@@ -23,20 +23,24 @@ updates.title: Updates
 
 updates.text.privacy: Updated our privacy policy.
 
+updates.5.date: March 30 2025
+updates.5.text.1: Complete redesign of the site to use a standardized style.
+updates.5.text.2: Changed some of our VPS providers to <a href="https://hosteam.pl/">HosTeam</a>.
+
 updates.4.date: November 30 2023
 updates.4.text.1: Centralized DNS servers & implemented GeoDNS.
 updates.4.text.2: Added US CDN hosted by <a href="https://www.chicagovps.net/">ChicagoVPS</a>.
-updates.4.text.3: All other regions use the EU CDN hosted by <a href="https://www.ionos.fr/">IONOS</a>.
+updates.4.text.3: All other regions use the EU CDN hosted by IONOS.
 
 updates.3.date: November 12 2023
 updates.3.text.1: Other services are back online.
-updates.3.text.2: Changed our host to <a href="https://www.ionos.fr/">IONOS</a>.
+updates.3.text.2: Changed our host to IONOS.
 updates.3.text.3: Finished all side pages.
 
 updates.2.date: August 15 2023
 updates.2.text.1: The website is back online.
 updates.2.text.2: New and much lighter design.
-updates.2.text.3: Changed our host to <a href="https://hostbrr.com/">HostBrr</a>.
+updates.2.text.3: Changed our host to HostBrr.
 updates.2.text.4: Added a section for web-based tools.
 
 updates.1.date: September 9 2022
