Re-enabled stubs for PNG analyser and ICO maker, Implemented Data utils, file utils and PNG parser, Still testing Update png-analyser.yml, png-chunk-analyser.yml, and 17 more files...

--- a/data/strings/en/ico-maker.yml
+++ b/data/strings/en/ico-maker.yml
@@ -4,7 +4,8 @@ meta.title: "Icon Maker"
 meta.description: "..."
 
 
-
+file.selection.title: "File Selection"
+file.selection.1: "Drop your file(s) here or click on the buttons."
 
 enable.expert.mode: "Enable expert mode"
 enable.binary.blobs: "Allow binary blobs"
