--- a/data/tools/ico-maker.yml
+++ b/data/tools/ico-maker.yml
@@ -1,6 +1,6 @@
 tools:
-  - id: "png-chunk-analyser"
-    applet_id: "png-chunk-analyser"
+  - id: "ico-maker"
+    applet_id: "ico-maker"
     metadata:
       head:
         title_key: "meta.title"
@@ -10,21 +10,22 @@ tools:
         description_key: "meta.description"
         type: null
         url: null
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/tools/ico-maker/main.png"
         image_type: null
       twitter:
         title_key: "meta.title"
         description_key: "meta.description"
       index:
-        priority: 100
+        priority: 1500
         enable: true
         title_key: "meta.title"
         preamble_key: "meta.description"
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/tools/ico-maker/main.png"
         image_alt_key: ""
       general:
         icon: "fab fa-python"
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
-          - "undefined"
+          - "utility"
+          - "graphics"
