--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -48,7 +48,7 @@
   abs_href: "/tools"
   icon: fad fa-toolbox
   active_id: tools
-  has_new_until_utc: 1760986472
+  has_new_until_utc: 1758726438
 
 - title_key: text.downloads
   raw_href: "https://files.nibblepoker.lu/"
@@ -58,11 +58,11 @@
 
 -
 
-- title_key: text.about
-  abs_href: "/about"
-  icon: fad fa-user
-  active_id: about
-  has_new_until_utc: 0
+#- title_key: text.about
+#  abs_href: "/about"
+#  icon: fad fa-user
+#  active_id: about
+#  has_new_until_utc: 0
 
 - title_key: text.contact
   abs_href: "/contact"
