--- a/data/strings/fr/home.yml
+++ b/data/strings/fr/home.yml
@@ -15,7 +15,7 @@ header.title: Page d'accueil
 intro.title: Bienvenue sur %0
 intro.text.1: Ce site web contient une collection de mes travaux personnels tels
   que des articles de blog, des logiciels utilitaires ou d'autres formes de médias.<br>Tout
-  est accessible gratuitement et sous des licences à l'open source.
+  est accessible gratuitement et sous des licences open source.
 intro.text.2: Si vous souhaitez me contacter, vous pouvez le faire via la page
   de contact lié dans la barre de navigation latérale.
 
