--- a/data/strings/en/uuid-generator.yml
+++ b/data/strings/en/uuid-generator.yml
@@ -10,6 +10,7 @@ type.uuid4: "UUID4 / GUID4"
 option.count: "UUID Count"
 option.hyphen: "Add hyphens"
 option.guid_brackets: "Add GUID brackets"
+option.uppercase: "Generate in uppercase"
 
 generate: "Generate"
 
