Updated VAT calculator, fixed minor TLD issues, Added strings, Optimized assets Update sidebar.yml, commons.yml, and 10 more files...

--- a/data/strings/en/commons.yml
+++ b/data/strings/en/commons.yml
@@ -102,8 +102,37 @@ country.argentina: "Argentina"
 country.australia: "Australia"
 country.austria: "Austria"
 country.azerbaijan: "Azerbaijan"
+country.azores: "Azores"
 country.bahamas: "Bahamas"
-
 country.belgium: "Belgium"
-
+country.bulgaria: "Bulgaria"
+country.corsica: "Corsica"
+country.croatia: "Croatia"
+country.cyprus: "Cyprus"
+country.czechia: "Czechia"
+country.denmark: "Denmark"
+country.estonia: "Estonia"
+country.finland: "Finland"
+country.france: "France"
+country.france.corsica: "France - Corsica"
+country.germany: "Germany"
+country.greece: "Greece"
+country.hungary: "Hungary"
+country.ireland: "Ireland"
+country.italy: "Italy"
+country.latvia: "Latvia"
+country.lithuania: "lithuania"
 country.luxembourg: "Luxembourg"
+country.madeira: "Madeira"
+country.malta: "Malta"
+country.monaco: "Monaco"
+country.netherlands: "Netherlands"
+country.poland: "Poland"
+country.portugal: "Portugal"
+country.portugal.azores: "Portugal - Azores"
+country.portugal.madeira: "Portugal - Madeira"
+country.romania: "Romania"
+country.slovenia: "Slovenia"
+country.slovakia: "Slovakia"
+country.spain: "Spain"
+country.sweden: "Sweden"
