--- a/data/strings/fr/commons.yml
+++ b/data/strings/fr/commons.yml
@@ -92,6 +92,47 @@ format.yaml: "YAML"
 
 action.generate: "Générer"
 
+country.afghanistan: "Afghanistan"
+country.albania: "Albanie"
+country.algeria: "Algérie"
+country.andorra: "Andorre"
+country.angola: "Angola"
+country.anguilla: "Anguilla"
+country.argentina: "Argentine"
+country.australia: "Australie"
+country.austria: "Autriche"
+country.azerbaijan: "Azerbaïdjan"
+country.azores: "Açores"
+country.bahamas: "Bahamas"
 country.belgium: "Belgique"
-
+country.bulgaria: "Bulgarie"
+country.corsica: "Corse"
+country.croatia: "Croatie"
+country.cyprus: "Chypre"
+country.czechia: "Tchéquie"
+country.denmark: "Danemark"
+country.estonia: "Estonie"
+country.finland: "Finlande"
+country.france: "France"
+country.france.corsica: "France - Corse"
+country.germany: "Allemagne"
+country.greece: "Grèce"
+country.hungary: "Hongrie"
+country.ireland: "Irlande"
+country.italy: "Italie"
+country.latvia: "Lettonie"
+country.lithuania: "Lituanie"
 country.luxembourg: "Luxembourg"
+country.madeira: "Madère"
+country.malta: "Malte"
+country.monaco: "Monaco"
+country.netherlands: "Pays-Bas"
+country.poland: "Pologne"
+country.portugal: "Portugal"
+country.portugal.azores: "Portugal - Açores"
+country.portugal.madeira: "Portugal - Madère"
+country.romania: "Roumanie"
+country.slovenia: "Slovénie"
+country.slovakia: "Slovaquie"
+country.spain: "Espagne"
+country.sweden: "Suède"
