Added basic tag filters, removed tag filter section temporarily Update app.py, content.json, and 9 more files...

--- a/data/tools/.png-optimizer.yml
+++ b/data/tools/.png-optimizer.yml
@@ -28,4 +28,4 @@ tools:
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
-          - "undefined"
+          - "graphics"
